calculate data on load

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 					<div class="panel panel-success">
 						<div class="panel-heading" id="connectPanelHeading">
 							<h3 class="panel-title">
-								<a id="connectPanelLink" data-toggle="collapse" data-target="#collapseConnect" href="#collapseConnect">
+								<a id="connectPanelLink" data-toggle="collapse" data-target="#collapseConnect">
 									Important Info
 								</a>
 							</h3>
@@ -70,7 +70,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading" id="colorPickerHeading">
 							<h3 class="panel-title">
-								<a id="colorpicker" data-toggle="collapse" data-target="#collapsecolorpicker" href="#collapsecolorpicker">Team Scores</a>
+								<a id="colorpicker" data-toggle="collapse" data-target="#collapsecolorpicker">Team Scores</a>
 									<span style="margin-left: 10px; padding: 2px 5px" class="badge badge-info" id="colorPickerSize"></span>
 								</a>
 							</h3>
@@ -93,7 +93,7 @@
 					<div class="panel panel-warning">
 						<div class="panel-heading" id="logPanelHeading">
 							<h3 class="panel-title">
-								<a id="logPanelLink" data-toggle="collapse" data-target="#collapseLog" href="#collapseLog">Log</a>
+								<a id="logPanelLink" data-toggle="collapse" data-target="#collapseLog">Log</a>
 									<span style="margin-left: 10px; padding: 2px 5px" class="badge badge-info" id="logSize"></span>
 									<!-- <button class="btn btn-text btn-mini" style="display: inline-block; margin: 5px 5px 8x 10px;" onclick="clearLog()">Clear</button> -->
 									<!-- <input type="checkbox" id="stickyLog" style="display: inline-block; margin: 5px 5px 8px 20px;" />Follow -->
