--- a/public/update.html
+++ b/public/update.html
@@ -20,7 +20,7 @@
       <option value="toma">Tôma</option>
       <option value="mattheu">Matthêu</option>
     </select>
-    <input type="text" placeholder="points" name="points">
+    <input type="number" placeholder="points" name="points">
     <select id="monthselect" name="month">
       <option value="1">January</option>
       <option value="2">February</option>
