--- a/public/update.html
+++ b/public/update.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Don Bosco Hiep Si</title>
+  <title>DB HS Update Scores</title>
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="bgBrown">
   <h2>Update Scores</h2>
   <br>
   <form action="/add" method="POST">
