--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <a class="navbar-brand" href="#">Don Bosco Hiep Si Dashboard</a>
           </div>
           <ul class="nav nav-tabs">
-            <li><a href="http://caesar-dashboard.mybluemix.net" target="_blank">BHT</a></li>
+            <li><a data-toggle="modal" data-target="#BHT">BHT</a></li>
           </ul>
         </div>
 			</div>
@@ -111,7 +111,27 @@
 
 		</div>
 
+		<!-- BHT modal popup -->
+		<div id="BHT" class="modal fade" role="dialog">
+		  <div class="modal-dialog">
 
+		    <!-- Modal content-->
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal">&times;</button>
+		        <h4 class="modal-title">Bó Hoa Thiêng</h4>
+		      </div>
+		      <div class="modal-body">
+		        <p>Under Construction.  Check back later!</p>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
+						<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+		      </div>
+		    </div>
+
+		  </div>
+		</div>
 
 
 
