--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,8 @@
 									<div class="row">
 										<div class="col-md-4">
 											<h2>Announcements</h2>
+											Please enroll in the Remind group to receive important announcements!
 
-											test
 										</div>
 										<div class="col-md-4">
 											<img src="http://tntt.lavangnm.org/_images/_pngs/_maincontent/_doan/hiepsi.png">
@@ -52,7 +52,7 @@
 										<div class="col-md-4">
 											<h2>Upcoming Events</h2>
 											<div class="roomStats">
-												test
+												October 21-22: Hiep Si/Nghia Si Retreat
 											</div>
 										</div>
 									</div>
