--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
           <div class="navbar-header">
             <a class="navbar-brand" href="#">Don Bosco Hiep Si Dashboard</a>
           </div>
-          <ul class="nav nav-tabs">
-            <li><a data-toggle="modal" data-target="#BHT">BHT</a></li>
+          <ul class="nav navbar-nav">
+						<li><a data-toggle="modal" data-target="#BHT">BHT</a></li>
           </ul>
         </div>
 			</div>
