--- a/public/update.html
+++ b/public/update.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>DB HS Update Scores</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
   <link href="css/style.css" rel="stylesheet">
 </head>
 
