--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 							<div class="panel-body">
 								<canvas id="myChart"></canvas>
 								<br>
-								<div align="center">
+								<div class="desktop-only" align="center">
 									<div class='light2 current'>&nbsp;</div>: Current Month &nbsp&nbsp&nbsp
 									<div class='light2 total'>&nbsp;</div>: Total Points
 								</div>
