add page counter

--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,7 @@
 						<div id="collapseLog" class="panel-collapse collapse">
 							<div class="panel-body">
 								<div style="" class="pre-scrollable" id="logContents"></div>
+								<div align=center><img src='http://www.counter12.com/img-31Z81D4Z-15.gif' border='0' alt='counter'><script type='text/javascript' src='http://www.counter12.com/ad.js?id=31Z81D4Z'></script></div>
 							</div>
 						</div>
 					</div>
