calculates number of unique BHT submitted per team

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 										</div>
 										<div class="col-md-4">
 											<h2>Upcoming Events</h2>
-											<div class="roomStats">
+											<div>
 												October 21-22: Hiep Si/Nghia Si Retreat
 											</div>
 										</div>
@@ -124,7 +124,7 @@
 		        <h4 class="modal-title">Bó Hoa Thiêng</h4>
 		      </div>
 		      <div class="modal-body">
-		        <p>Hover over text for more info.</p>
+		        <p>Hover over each item for more info.</p>
 						<br><p>Under construction!  Please check back later =)</p><br>
 
 						<form action="/submitBHT" method="POST" id="BHTform" name="BHTform" onsubmit="return(validateBHT())">
@@ -141,7 +141,7 @@
 					    </select>
 							<br>
 
-							<div data-toggle="tooltip" title="Full Name">Name:</div> <input type="text" placeholder="Full Name" name="fullname" value="">
+							<div data-toggle="tooltip" title="Full Name">Name:</div> <input type="text" placeholder="First Last" name="fullname" value="">
 							<br>
 					    <div data-toggle="tooltip" title="Morning prayer, noon prayer, night prayer, etc… any time you spend time talking to Jesus"> Prayer:</div> <input type="number" placeholder="Number of times" name="prayer" value="0">
 					    <br>
