edit text on dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,17 @@
 										<div class="col-md-4">
 											<h2>Announcements</h2>
 											Please enroll in the Remind group to receive important announcements!
+											<br>
 
 										</div>
 										<div class="col-md-4">
-											<img src="http://tntt.lavangnm.org/_images/_pngs/_maincontent/_doan/hiepsi.png">
+											<center><img src="http://tntt.lavangnm.org/_images/_pngs/_maincontent/_doan/hiepsi.png"></center>
+											<br>
+											<br><b>Attendance:</b> Up to 20 points each Sunday
+											<br><b>Participation:</b> Up to 15 points each Sunday
+											<br><b>BHT:</b> Up to 14 pts per week (Each day: 4 or more submissions = 1 pt, 6 or more submissions = 2 pts)
+											<br><b>Other Events:</b> Will be announced
+
 										</div>
 										<div class="col-md-4">
 											<h2>Upcoming Events</h2>
@@ -125,7 +132,6 @@
 		      </div>
 		      <div class="modal-body">
 		        <p>Hover over each item for more info.</p>
-						<br><p>Under construction!  Please check back later =)</p><br>
 
 						<form action="/submitBHT" method="POST" id="BHTform" name="BHTform" onsubmit="return(validateBHT())">
 					    Team: <select name="teamname">
