--- a/public/index.html
+++ b/public/index.html
@@ -52,14 +52,14 @@
 											<br>
 											<br><b>Attendance:</b> Up to 20 points each Sunday
 											<br><b>Participation:</b> Up to 15 points each Sunday
-											<br><b>BHT:</b> Up to 14 pts per week (Each day: 4 or more submissions = 1 pt, 6 or more submissions = 2 pts)
+											<br><b>BHT:</b> Up to 14 pts per week (Each day: 4 or more members = 1 pt, 6 or more members = 2 pts)
 											<br><b>Other Events:</b> Will be announced
 
 										</div>
 										<div class="col-md-4">
 											<h2>Upcoming Events</h2>
 											<div>
-												October 21-22: Hiep Si/Nghia Si Retreat
+												October 21-22: Hiep Si/Nghia Si Retreat (60 points)
 											</div>
 										</div>
 									</div>
