--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 		<link href="css/mdb.min.css" rel="stylesheet">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
+		<link rel='shortcut icon' type='image/png' href='images/tnttfavicon.png'/>
 
 	</head>
 
