use local penguin image

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 
 										</div>
 										<div class="col-md-4">
-											<center><img src="http://tntt.lavangnm.org/_images/_pngs/_maincontent/_doan/hiepsi.png"></center>
+											<center><img src="images/hiepsi.png"></center>
 											<br>
 											<br><b>Attendance:</b> Up to 20 points each Sunday
 											<br><b>Participation:</b> Up to 15 points each Sunday
