--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,11 @@
 			<div class="container">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">Don Bosco Hiep Si Dashboard</a>
+            <a class="navbar-brand" href="#">Don Bosco Hiep Si</a>
           </div>
           <ul class="nav navbar-nav">
+						<li class="active"><a href="#">Home</a></li>
+						<li><a href="/resources">Resources</a></li>
 						<li><a data-toggle="modal" data-target="#BHT">BHT</a></li>
           </ul>
         </div>
