--- a/public/resources.html
+++ b/public/resources.html
@@ -40,7 +40,7 @@
 								</a>
 							</h3>
 						</div>
-						<div id="collapse10DTN" class="panel-collapse collapse in">
+						<div id="collapse10DTN" class="panel-collapse collapse">
 							<div class="panel-body">
 								<div class="container">
 									<div class="row">
