--- a/public/index.html
+++ b/public/index.html
@@ -15,20 +15,23 @@
 	</head>
 
 	<body onload="init()" class="bgBrown">
-		<div class="navbar navbar-inverse" role="navigation">
+		<nav class="navbar navbar-inverse" role="navigation">
 			<div class="container">
         <div class="container-fluid">
           <div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapseNav"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="false"></span></button>
             <a class="navbar-brand" href="#">Don Bosco Hiep Si</a>
           </div>
-          <ul class="nav navbar-nav">
-						<li class="active"><a href="#">Home</a></li>
-						<li><a href="/resources">Resources</a></li>
-						<li><a data-toggle="modal" data-target="#BHT">BHT</a></li>
-          </ul>
+					<div class="collapse navbar-collapse" id="collapseNav">
+	          <ul class="nav navbar-nav">
+							<li class="active"><a href="#">Home</a></li>
+							<li><a href="/resources">Resources</a></li>
+							<li><a data-toggle="modal" data-target="#BHT">BHT</a></li>
+	          </ul>
+					</div>
         </div>
 			</div>
-		</div>
+		</nav>
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
