--- a/public/resources.html
+++ b/public/resources.html
@@ -19,12 +19,15 @@
 			<div class="container">
         <div class="container-fluid">
           <div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapseNav"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="false"></span></button>
             <a class="navbar-brand" href="#">Don Bosco Hiep Si</a>
           </div>
-          <ul class="nav navbar-nav">
-						<li><a href="/">Home</a></li>
-						<li class="active"><a href="#">Resources</a></li>
-          </ul>
+					<div class="collapse navbar-collapse" id="collapseNav">
+	          <ul class="nav navbar-nav">
+							<li><a href="/">Home</a></li>
+							<li class="active"><a href="#">Resources</a></li>
+	          </ul>
+					</div>
         </div>
 			</div>
 		</div>
