add suggestion box link

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,8 @@
 										<div class="col-md-4">
 											<h2>Announcements</h2>
 											Please enroll in the Remind group to receive important announcements!
-											<br>
+											<br><br>
+											Ask Anh Quang or any HT a question: <a href='https://www.suggestionox.com/r/fKZRaW'>Anonymous Question Box</a>
 
 										</div>
 										<div class="col-md-4">
