change bht point scale

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 											<br>
 											<br><b>Attendance:</b> Up to 20 points each Sunday
 											<br><b>Participation:</b> Up to 15 points each Sunday
-											<br><b>BHT:</b> Up to 14 pts per week (Each day: 4 or more members = 1 pt, 6 or more members = 2 pts)
+											<br><b>BHT:</b> Up to 21 pts per week (Each day: 1-3 members: 1 pt, 4-5 members: 2 pts, 6 or more members: 3 pts)
 											<br><b>Other Events:</b> Will be announced
 
 										</div>
