split chart to two graphs

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,17 @@
 						</div>
 						<div id="collapseteamscores" class="panel-collapse collapse in">
 							<div class="panel-body">
-								<canvas id="myChart"></canvas>
+								<div class="container">
+									<div class="row">
+										<div class="col-md-6">
+
+											<canvas id="currMonthChart"></canvas>
+										</div>
+										<div class="col-md-6">
+											<canvas id="totalChart"></canvas>
+										</div>
+									</div>
+								</div>
 								<br>
 								<div class="desktop-only" align="center">
 									<div class='light2 current'>&nbsp;</div>: Current Month &nbsp&nbsp&nbsp
