--- a/public/resources.html
+++ b/public/resources.html
@@ -36,6 +36,38 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="panel panel-primary">
+						<div class="panel-heading" id="teamNamesHeading">
+							<h3 class="panel-title">
+								<a id="teamNames" data-toggle="collapse" data-target="#collapseTeamNames">
+								Team Names and Responses
+								</a>
+							</h3>
+						</div>
+						<div id="collapseTeamNames" class="panel-collapse collapse">
+							<div class="panel-body">
+								<div class="container">
+									<div class="row">
+
+										<b>Phêrô:</b> Trung Tín
+										<br><b>Anrê:</b> Can Đảm
+										<br><b>Giacôbê Tiền:</b> Trung Thành
+										<br><b>Gioan:</b> Yêu Thương
+										<br><b>Philiphê:</b> Cương Quyết
+										<br><b>Nathanaen:</b> Công Chính
+										<br><b>Tôma:</b> Tuyên Tín
+										<br><b>Matthêu:</b> Hiên Ngang
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="panel panel-primary">
 						<div class="panel-heading" id="10DTNheading">
 							<h3 class="panel-title">
 								<a id="10DTNpanelLink" data-toggle="collapse" data-target="#collapse10DTN">
