edit index text

--- a/public/index.html
+++ b/public/index.html
@@ -52,21 +52,28 @@
 											Please enroll in the Remind group to receive important announcements!
 											<br><br>
 											Ask Anh Quang or any HT a question: <a href='https://www.suggestionox.com/r/fKZRaW' target="_blank">Anonymous Question Box</a>
+											<br>
+											<br>
 
 										</div>
 										<div class="col-md-4">
 											<center><img src="images/hiepsi.png"></center>
 											<br>
-											<br><b>Attendance:</b> Up to 20 points each Sunday
-											<br><b>Participation:</b> Up to 15 points each Sunday
-											<br><b>BHT:</b> Up to 21 pts per week (Each day: 1-3 members: 1 pt, 4-5 members: 2 pts, 6 or more members: 3 pts)
+											<br><b>Attendance:</b> Up to <b>20 points</b> each Sunday
+											<br><b>Participation:</b> Up to <b>15 points</b> each Sunday
+											<br><b>BHT:</b> Up to <b>21 pts</b> per week (Each day: 1-3 members: 1 pt, 4-5 members: 2 pts, 6 or more members: 3 pts)
 											<br><b>Other Events:</b> Will be announced
 
 										</div>
 										<div class="col-md-4">
 											<h2>Upcoming Events</h2>
 											<div>
-												October 21-22: Hiep Si/Nghia Si Retreat (60 points)
+
+													• October 21-22: Hiep Si/Nghia Si Retreat (up to <b>60 points</b>/team)
+													<br>• 6pm Friday - 3pm Saturday
+													<br>
+													<br>• November 20: Turn in shoebox project <b>(5 points)</b>
+
 											</div>
 										</div>
 									</div>
