--- a/public/update.html
+++ b/public/update.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>DB HS Update Scores</title>
-  <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link rel='shortcut icon' type='image/png' href='images/tnttfavicon.png'/>
 </head>
 
 <body class="bgBrown">
-  <div class="navbar navbar-inverse" role="navigation">
+  <nav class="navbar navbar-inverse" role="navigation">
     <div class="container">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -26,7 +26,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </nav>
 
   <div class="container">
 
