add hiep si ca to resources

--- a/public/resources.html
+++ b/public/resources.html
@@ -68,6 +68,38 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="panel panel-primary">
+						<div class="panel-heading" id="HiepSiCaHeading">
+							<h3 class="panel-title">
+								<a id="HiepSiCaPanelLink" data-toggle="collapse" data-target="#collapseHiepSiCa">
+								Hiệp Sĩ Ca
+								</a>
+							</h3>
+						</div>
+						<div id="collapseHiepSiCa" class="panel-collapse collapse">
+							<div class="panel-body">
+								<div class="container">
+									<div class="row">
+										Hiệp Sĩ, tiến bước vào đời. Thánh Thể Giêsu, lấy làm nguồn sống.
+										<br><b>DK:</b> Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
+										<br>
+										<br>Hiệp Sĩ, tiến bước vào đời. Huynh Đệ, Bác Ái, Phục Vụ, Hiệp Nhất.
+										<br>Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
+										<br>
+										<br>Hiệp Sĩ, tiến bước vào đời. Phúc Thật Tám Mối. Theo lời Chúa phán.
+										<br>Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="panel panel-primary">
 						<div class="panel-heading" id="10DTNheading">
 							<h3 class="panel-title">
 								<a id="10DTNpanelLink" data-toggle="collapse" data-target="#collapse10DTN">
@@ -116,6 +148,8 @@
 					</div>
 				</div>
 			</div>
+
+
 
 			<div class="row">
 				<div class="col-xs-12">
