add hiepsica mp3

--- a/public/resources.html
+++ b/public/resources.html
@@ -87,6 +87,11 @@
 										<br>
 										<br>Hiệp Sĩ, tiến bước vào đời. Phúc Thật Tám Mối. Theo lời Chúa phán.
 										<br>Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
+										<br>
+										<br><audio controls>
+												  <source src="files/HiepSiCa.mp3" type="audio/mpeg">
+												Your browser does not support the audio element.
+												</audio>
 
 									</div>
 								</div>
