--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 											<h2>Announcements</h2>
 											Please enroll in the Remind group to receive important announcements!
 											<br><br>
-											Ask Anh Quang or any HT a question: <a href='https://www.suggestionox.com/r/fKZRaW' target="_blank">Anonymous Question Box</a>
+											Ask Anh Quang or any HT a question: <a href='http://quangxvu-developer-edition.na14.force.com/anonbox' target="_blank">Anonymous Question Box</a>
 											<br>
 											<br>
 
@@ -83,6 +83,8 @@
 					</div>
 				</div>
 			</div>
+
+
 
       <div class="row">
 				<div class="col-xs-12">
