add english hiepsica

--- a/public/resources.html
+++ b/public/resources.html
@@ -79,20 +79,31 @@
 							<div class="panel-body">
 								<div class="container">
 									<div class="row">
-										Hiệp Sĩ, tiến bước vào đời. Thánh Thể Giêsu, lấy làm nguồn sống.
-										<br><b>DK:</b> Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
-										<br>
-										<br>Hiệp Sĩ, tiến bước vào đời. Huynh Đệ, Bác Ái, Phục Vụ, Hiệp Nhất.
-										<br>Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
-										<br>
-										<br>Hiệp Sĩ, tiến bước vào đời. Phúc Thật Tám Mối. Theo lời Chúa phán.
-										<br>Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
-										<br>
-										<br><audio controls>
-												  <source src="files/HiepSiCa.mp3" type="audio/mpeg">
-												Your browser does not support the audio element.
-												</audio>
+										<div class="col-md-6">
+											Hiệp Sĩ, tiến bước vào đời. Thánh Thể Giêsu, lấy làm nguồn sống.
+											<br><b>DK:</b> Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
+											<br>
+											<br>Hiệp Sĩ, tiến bước vào đời. Huynh Đệ, Bác Ái, Phục Vụ, Hiệp Nhất.
+											<br>Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
+											<br>
+											<br>Hiệp Sĩ, tiến bước vào đời. Phúc Thật Tám Mối. Theo lời Chúa phán.
+											<br>Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
+											<br>
+											<br><audio controls>
+													  <source src="files/HiepSiCa.mp3" type="audio/mpeg">
+													Your browser does not support the audio element.
+													</audio>
+										</div>
+										<div class="col-md-6">
+											Hiep Si, moving forward into the world, take the Eucharist as the source of life.
+											<br>Brothers and sisters, together we commit to serve.  As Hiep Si we offer our lives.
+											<br><br>Hiep Si, moving forward into the world, our maxims are Fraternity, Charity, Service, and Unity.
+											<br>Brothers and sisters, together we commit to serve.  As Hiep Si we offer our lives.
+											<br><br>Hiep Si, moving foward into the world, our ideals are based on the 8 Beatitudes.
+											<br>Brothers and sisters, together we commit to serve.  As Hiep Si we offer our lives.
+											<br>
 
+										</div>
 									</div>
 								</div>
 							</div>
