add beatitudes to resources

--- a/public/resources.html
+++ b/public/resources.html
@@ -112,6 +112,38 @@
 				</div>
 			</div>
 
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="panel panel-primary">
+						<div class="panel-heading" id="beatitudesHeading">
+							<h3 class="panel-title">
+								<a id="beatitudes" data-toggle="collapse" data-target="#collapseBeatitudes">
+								The Eight Beatitudes
+								</a>
+							</h3>
+						</div>
+						<div id="collapseBeatitudes" class="panel-collapse collapse">
+							<div class="panel-body">
+								<div class="container">
+									<div class="row">
+
+										<b>Matthew 5:3-10</b>
+										<br>Blessed are the poor in spirit, for theirs is the kingdom of heaven.
+										<br>Blessed are they who mourn, for they will be comforted.
+										<br>Blessed are the meek, fo rthey will inherit the land.
+										<br>Blessed are they who hunger and thirst for righteousness, for they will be satisfied.
+										<br>Blessed are the merciful, for they will be shown mercy.
+										<br>Blessed are the clean of heart, for they will see God.
+										<br>Blessed are the peacemakers, for they will be called children of God.
+										<br>Blessed are they who are persecuted for the sake of righteousness, for theirs is the kingdom of heaven.
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
 			<div class="row">
 				<div class="col-xs-12">
