--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 						<div class="panel-heading" id="ImpInfoPanelHeading">
 							<h3 class="panel-title">
 								<a id="ImpInfoPanelLink" data-toggle="collapse" data-target="#collapseImpInfo">
-									Important Info
+									<span class="glyphicon glyphicon-bullhorn" arai-hidden="true"></span> Important Info
 								</a>
 							</h3>
 						</div>
@@ -85,13 +85,42 @@
 			</div>
 
 
+            <div class="row">
+				<div class="col-xs-12">
+					<div class="panel panel-default">
+						<div class="panel-heading" id="AssignmentsPanelHeading">
+							<h3 class="panel-title">
+								<a id="AssignmentsPanelLink" data-toggle="collapse" data-target="#collapseAssignments">
+									<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Assignments
+								</a>
+							</h3>
+						</div>
+						<div id="collapseAssignments" class="panel-collapse collapse in">
+							<div class="panel-body">
+								<div class="container">
+									<div class="row">
+										<div class="col-md-12">
+                                            <b>Team Music Video</b> - Due November 20
+                                            <br>
+                                            Create a video of your team singing <a href="http://hiepsiaustin.herokuapp.com/resources" target="_blank">Hiep Si Ca</a> and acting out what each line means to you.  Feel free to be creative!
+                                            <br>Example here: <a href="https://www.youtube.com/watch?v=U5uRKxWoYRg" target="_blank">Doan from California</a>
+										
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+            
 
-      <div class="row">
+            <div class="row">
 				<div class="col-xs-12">
 					<div class="panel panel-info">
 						<div class="panel-heading" id="teamscoresHeading">
 							<h3 class="panel-title">
-								<a id="teamscores" data-toggle="collapse" data-target="#collapseteamscores">Team Scores</a>
+								<a id="teamscores" data-toggle="collapse" data-target="#collapseteamscores"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Team Scores</a>
 									<span style="margin-left: 10px; padding: 2px 5px" class="badge badge-info" id="teamscoresSize"></span>
 								</a>
 							</h3>
