--- a/public/index.html
+++ b/public/index.html
@@ -130,19 +130,23 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-6">
+                                            <center><b>Current Month</b></center>
 
 											<canvas id="currMonthChart"></canvas>
 										</div>
 										<div class="col-md-6">
+                                            <center><b>Total Points</b></center>
 											<canvas id="totalChart"></canvas>
 										</div>
 									</div>
 								</div>
 								<br>
+<!--
 								<div class="desktop-only" align="center">
 									<div class='light2 current'>&nbsp;</div>: Current Month &nbsp&nbsp&nbsp
 									<div class='light2 total'>&nbsp;</div>: Total Points
 								</div>
+-->
 
 							</div>
 						</div>
