--- a/public/resources.html
+++ b/public/resources.html
@@ -80,13 +80,13 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-6">
-											Hiệp Sĩ, tiến bước vào đời. Thánh Thể Giêsu, lấy làm nguồn sống.
+                                            Hiệp Sĩ, tiến bước vào đời. <b>Thánh Thể Giêsu</b>, lấy làm nguồn sống.
 											<br><b>DK:</b> Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
 											<br>
-											<br>Hiệp Sĩ, tiến bước vào đời. Huynh Đệ, Bác Ái, Phục Vụ, Hiệp Nhất.
+                                            <br>Hiệp Sĩ, tiến bước vào đời. <b>Huynh Đệ, Bác Ái, Phục Vụ, Hiệp Nhất</b>.
 											<br>Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
 											<br>
-											<br>Hiệp Sĩ, tiến bước vào đời. Phúc Thật Tám Mối. Theo lời Chúa phán.
+                                            <br>Hiệp Sĩ, tiến bước vào đời. <b>Phúc Thật Tám Mối</b>. Theo lời Chúa phán.
 											<br>Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
 											<br>
 											<br><audio controls>
@@ -95,11 +95,11 @@
 													</audio>
 										</div>
 										<div class="col-md-6">
-											Hiep Si, moving forward into the world, take the Eucharist as the source of life.
+                                            Hiep Si, moving forward into the world, take the <b>Eucharist</b> as the source of life.
 											<br>Brothers and sisters, together we commit to serve.  As Hiep Si we offer our lives.
-											<br><br>Hiep Si, moving forward into the world, our maxims are Fraternity, Charity, Service, and Unity.
+                                            <br><br>Hiep Si, moving forward into the world, our maxims are <b>Fraternity, Charity, Service, and Unity</b>
 											<br>Brothers and sisters, together we commit to serve.  As Hiep Si we offer our lives.
-											<br><br>Hiep Si, moving foward into the world, our ideals are based on the 8 Beatitudes.
+                                            <br><br>Hiep Si, moving foward into the world, our ideals are based on the <b>8 Beatitudes</b>.
 											<br>Brothers and sisters, together we commit to serve.  As Hiep Si we offer our lives.
 											<br>
 
@@ -159,34 +159,34 @@
 							<div class="panel-body">
 								<div class="container">
 									<div class="row">
-										Thiếu Nhi mỗi sáng dâng ngày,
+										1. Thiếu Nhi mỗi sáng dâng ngày,
 										<br>Điểm tô đời sống hương bay nguyện cầu.
 										<br>
-										<br>Thiếu Nhi Thánh Thể nhiệm mầu,
+										<br>2. Thiếu Nhi Thánh Thể nhiệm mầu,
 										<br>Tôn sùng rước lễ, nhà chầu viếng thăm.
 										<br>
-										<br>Thiếu Nhi Thánh Giá Chúa nằm,
+										<br>3. Thiếu Nhi Thánh Giá Chúa nằm,
 										<br>Nhìn lên phấn khởi chuyên cần hy sinh.
 										<br>
-										<br>Thiếu Nhi nhờ Mẹ đinh ninh,
+										<br>4. Thiếu Nhi nhờ Mẹ đinh ninh,
 										<br>Quyết làm gương sáng xứng danh tông đồ.
 										<br>
-										<br>Thiếu Nhi mọi việc nhỏ to,
+										<br>5. Thiếu Nhi mọi việc nhỏ to,
 										<br>Tinh thần vâng phục chuyên lo đậm đà.
 										<br>
-										<br>Thiếu Nhi đằm thắm nết na,
+										<br>6. Thiếu Nhi đằm thắm nết na,
 										<br>Nói năng hành động nõn nà trắng trong.
 										<br>
-										<br>Thiếu Nhi bác ái một lòng,
+										<br>7. Thiếu Nhi bác ái một lòng,
 										<br>Tim luôn quảng đại mới mong giúp người.
 										<br>
-										<br>Thiếu Nhi ngay thẳng trọn đời,
+										<br>8. Thiếu Nhi ngay thẳng trọn đời,
 										<br>Nói làm đúng mực người người tin yêu.
 										<br>
-										<br>Thiếu Nhi dù khó trăm chiều,
+										<br>9. Thiếu Nhi dù khó trăm chiều,
 										<br>Chu toàn bổn phận mọi điều chăm chuyên.
 										<br>
-										<br>Thiếu Nhi thực hiện hoa thiêng,
+										<br>10. Thiếu Nhi thực hiện hoa thiêng,
 										<br>Chép ghi mỗi tối cộng biên mỗi tuần.
 										<br>
 									</div>
