--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapseNav"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="false"></span></button>
-            <a class="navbar-brand" href="#">Don Bosco Hiep Si</a>
+            <a class="navbar-brand" href="javascript:window.location.reload(true)">Don Bosco Hiep Si</a>
           </div>
 					<div class="collapse navbar-collapse" id="collapseNav">
 	          <ul class="nav navbar-nav">
@@ -33,7 +33,7 @@
 			</div>
 		</nav>
 		<div class="container">
-			<div class="row">
+			<div class="row" id="#">
 				<div class="col-xs-12">
 					<div class="panel panel-success">
 						<div class="panel-heading" id="ImpInfoPanelHeading">
