fix for collapsing panels on ios

--- a/public/resources.html
+++ b/public/resources.html
@@ -38,7 +38,7 @@
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="teamNamesHeading">
 							<h3 class="panel-title">
-								<a id="teamNames" data-toggle="collapse" data-target="#collapseTeamNames">
+								<a id="teamNames" data-toggle="collapse" data-target="#collapseTeamNames" href="#collapseTeamNames">
 								Team Names and Responses
 								</a>
 							</h3>
@@ -70,7 +70,7 @@
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="HiepSiCaHeading">
 							<h3 class="panel-title">
-								<a id="HiepSiCaPanelLink" data-toggle="collapse" data-target="#collapseHiepSiCa">
+								<a id="HiepSiCaPanelLink" data-toggle="collapse" data-target="#collapseHiepSiCa" href="#collapseHiepSiCa">
 								Hiệp Sĩ Ca
 								</a>
 							</h3>
@@ -117,7 +117,7 @@
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="beatitudesHeading">
 							<h3 class="panel-title">
-								<a id="beatitudes" data-toggle="collapse" data-target="#collapseBeatitudes">
+								<a id="beatitudes" data-toggle="collapse" data-target="#collapseBeatitudes" href="#collapseBeatitudes">
 								The Eight Beatitudes
 								</a>
 							</h3>
@@ -150,7 +150,7 @@
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="10DTNheading">
 							<h3 class="panel-title">
-								<a id="10DTNpanelLink" data-toggle="collapse" data-target="#collapse10DTN">
+								<a id="10DTNpanelLink" data-toggle="collapse" data-target="#collapse10DTN" href="#collapse10DTN">
 								10 Điều Tâm Niệm TNTT
 								</a>
 							</h3>
@@ -204,7 +204,7 @@
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="TNTHCPanelHeading">
 							<h3 class="panel-title">
-								<a id="TNTHCPanelLink" data-toggle="collapse" data-target="#collapseTNTHC">
+								<a id="TNTHCPanelLink" data-toggle="collapse" data-target="#collapseTNTHC" href="#collapseTNTHC">
 								Thiếu Nhi Tân Hành Ca
 								</a>
 							</h3>
