--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 						<div class="panel-heading" id="ImpInfoPanelHeading">
 							<h3 class="panel-title">
 								<a id="ImpInfoPanelLink" data-toggle="collapse" data-target="#collapseImpInfo">
-									<span class="glyphicon glyphicon-bullhorn" arai-hidden="true"></span> Important Info
+									<span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> Important Info
 								</a>
 							</h3>
 						</div>
@@ -104,7 +104,7 @@
                                             <br>
                                             Create a video of your team singing <a href="http://hiepsiaustin.herokuapp.com/resources" target="_blank">Hiep Si Ca</a> and acting out what each line means to you.  Feel free to be creative!
                                             <br>Example here: <a href="https://www.youtube.com/watch?v=U5uRKxWoYRg" target="_blank">Doan from California</a>
-										
+
 										</div>
 									</div>
 								</div>
@@ -113,7 +113,7 @@
 					</div>
 				</div>
 			</div>
-            
+
 
             <div class="row">
 				<div class="col-xs-12">
