--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,13 @@
 
 													• October 21-22: Hiep Si/Nghia Si Retreat (up to <b>60 points</b>/team)
 													<br>• 6pm Friday - 3pm Saturday
+
+													<br> <b>Don't forget to bring</b>
+													<br>• Uniform + Khan (don't have to wear it the whole time, just have it)
+													<br>• Sleeping bag
+													<br>• Flashlight
+													<br>• Toothbrush and other personal hygiene items
+
 													<br>
 													<br>• November 20: Turn in shoebox project <b>(5 points)</b>
 
