--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 											Please enroll in the Remind group to receive important announcements!
 											<br><br>
 											Ask Anh Quang or any HT a question: <a href='http://quangxvu-developer-edition.na14.force.com/anonbox' target="_blank">Anonymous Question Box</a>
-											<br>
+											<br>If you have suggestions or issues with the site, please post those in the box as well.
 											<br>
 
 										</div>
