--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,7 @@
 													<br>• Sleeping bag
 													<br>• Flashlight
 													<br>• Toothbrush and other personal hygiene items
+													<br>• A snack to share with your team!
 
 													<br>
 													<br>• November 20: Turn in shoebox project <b>(5 points)</b>
