--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,8 @@
 
 													• October 21-22: Hiep Si/Nghia Si Retreat (up to <b>60 points</b>/team)
 													<br>• 6pm Friday - 3pm Saturday
-
+                                                    <br><a href="/consentForm" target="_blank">Consent Form</a>    
+                                                
 													<br> <b>Don't forget to bring</b>
 													<br>• Uniform + Khan (don't have to wear it the whole time, just have it)
 													<br>• Sleeping bag
