--- a/public/index.html
+++ b/public/index.html
@@ -70,18 +70,11 @@
 											<div>
 
 													• October 21-22: Hiep Si/Nghia Si Retreat (up to <b>60 points</b>/team)
-													<br>• 6pm Friday - 3pm Saturday
-                                                    <br><a href="/consentForm" target="_blank">Consent Form</a>    
-                                                
-													<br> <b>Don't forget to bring</b>
-													<br>• Uniform + Khan (don't have to wear it the whole time, just have it)
-													<br>• Sleeping bag
-													<br>• Flashlight
-													<br>• Toothbrush and other personal hygiene items
-													<br>• A snack to share with your team!
+													<br>Thanks to everyone who came to the retreat!
 
 													<br>
 													<br>• November 20: Turn in shoebox project <b>(5 points)</b>
+													<br><font size="-1">If you need a shoebox just ask Anh Denny for one</font>
 
 											</div>
 										</div>
