--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 											Please enroll in the Remind group to receive important announcements!
 											<br><br>
 											Ask Anh Quang or any HT a question: <a href='http://quangxvu-developer-edition.na14.force.com/anonbox' target="_blank">Anonymous Question Box</a>
-											<br>If you have suggestions or issues with the site, please post those in the box as well.
+											<br><font size="-1">If you have suggestions or issues with the site, please post those in the box as well.</font>
 											<br>
 
 										</div>
@@ -73,7 +73,7 @@
 													<br>Thanks to everyone who came to the retreat!
 
 													<br>
-													<br>• November 20: Turn in shoebox project <b>(5 points)</b>
+													<br>• November 20: Deadline to turn in shoebox project <b>(5 points)</b>
 													<br><font size="-1">If you need a shoebox just ask Anh Denny for one</font>
 
 											</div>
@@ -105,7 +105,8 @@
                                             <b>Team Music Video</b> - Due November 20
                                             <br>
                                             Create a video of your team singing <a href="http://hiepsiaustin.herokuapp.com/resources" target="_blank">Hiep Si Ca</a> and acting out what each line means to you.  Feel free to be creative!
-                                            <br>Example here: <a href="https://www.youtube.com/watch?v=U5uRKxWoYRg" target="_blank">Doan from California</a>
+																						<br>Come ready to sing and record with your team this Sunday! (Oct 30)
+																						<br>Example here: <a href="https://www.youtube.com/watch?v=U5uRKxWoYRg" target="_blank">Doan from California</a>
 
 										</div>
 									</div>
