log shows table instead of raw json

--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,18 @@
 						</div>
 						<div id="collapseLog" class="panel-collapse collapse">
 							<div class="panel-body">
-								<div style="" class="pre-scrollable" id="logContents"></div>
+								<div style="" class="pre-scrollable" id="logContents">
+                                    <table class="table table-striped table-condensed table-hover table-responsive " id="logContentsTable">
+                                        <thead>
+                                        <tr>
+                                            <th>Team Name</th>
+                                            <th>Points</th>
+                                            <th>Month</th>
+                                            <th>Comment</th>
+                                        </tr>
+                                        </thead>
+                                    </table>
+                                </div>
 								<div align=center><img src='http://www.counter12.com/img-31Z81D4Z-15.gif' border='0' alt='counter'><script type='text/javascript' src='http://www.counter12.com/ad.js?id=31Z81D4Z'></script></div>
 							</div>
 						</div>
