remove fadein from graph panel, add to resources page

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
 			</div>
 
 
-            <div class="row animatedpanel">
+            <div class="row ">
 				<div class="col-xs-12">
 					<div class="panel panel-info">
 						<div class="panel-heading" id="teamscoresHeading">
@@ -271,7 +271,7 @@
 
         
         <script type="text/javascript">
-            sr.reveal('.animatedpanel',{reset:true, viewFactor:0.1, easing:'ease-in-out'});
+            sr.reveal('.animatedpanel',{reset:true, viewFactor:0.1, easing:'ease-in-out', duration:250, origin:'left', scale:1});
         </script>
 
 
