--- a/public/resources.html
+++ b/public/resources.html
@@ -7,11 +7,26 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<!-- <link href="css/mdb.min.css" rel="stylesheet"> -->
+        <script src="js/utils/scrollreveal.min.js"></script>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 		<link rel='shortcut icon' type='image/png' href='images/tnttfavicon.png'/>
 
+        <script>
+          window.sr = ScrollReveal();
+
+          // Add class to <html> if ScrollReveal is supported
+          if (sr.isSupported()) {
+            document.documentElement.classList.add('sr');
+          }
+        </script>
+        <style>
+
+        /* Ensure elements load hidden before ScrollReveal runs */
+        .sr .animatedpanel { visibility: hidden; }
+
+        </style>
+        
 	</head>
 
 	<body class="bgBrown">
@@ -33,7 +48,7 @@
 		</div>
 		<div class="container">
 
-			<div class="row">
+			<div class="row animatedpanel">
 				<div class="col-xs-12">
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="teamNamesHeading">
@@ -65,7 +80,7 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row animatedpanel">
 				<div class="col-xs-12">
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="HiepSiCaHeading">
@@ -112,7 +127,7 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row animatedpanel">
 				<div class="col-xs-12">
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="beatitudesHeading">
@@ -145,7 +160,7 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row animatedpanel">
 				<div class="col-xs-12">
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="10DTNheading">
@@ -199,7 +214,7 @@
 
 
 
-			<div class="row">
+			<div class="row animatedpanel">
 				<div class="col-xs-12">
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="TNTHCPanelHeading">
@@ -235,7 +250,9 @@
 		</div>
 
 
-
+        <script type="text/javascript">
+            sr.reveal('.animatedpanel',{reset:true, viewFactor:0.1, easing:'ease-in-out', duration:200, origin:'left', scale:1});
+        </script>
 
 		<script src="js/utils/jquery.min.js"></script>
 		<script src="js/utils/bootstrap.min.js"></script>
