--- a/public/index.html
+++ b/public/index.html
@@ -271,7 +271,7 @@
 
         
         <script type="text/javascript">
-            sr.reveal('.animatedpanel',{reset:true, viewFactor:0.1, easing:'ease-in-out', duration:250, origin:'left', scale:1});
+            sr.reveal('.animatedpanel',{reset:false, viewFactor:0.15, easing:'ease-in-out', duration:500, origin:'left', scale:1});
         </script>
 
 
