--- a/public/index.html
+++ b/public/index.html
@@ -33,21 +33,22 @@
 	<body onload="init()" class="bgBrown">
 		<nav class="navbar navbar-inverse" role="navigation">
 			<div class="container">
-        <div class="container-fluid">
-          <div class="navbar-header">
+				<div class="container-fluid">
+					<div class="navbar-header">
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapseNav"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="false"></span></button>
-            <a class="navbar-brand" href="javascript:window.location.reload(true)">Don Bosco Hiep Si</a>
-          </div>
+						<a class="navbar-brand" href="javascript:window.location.reload(true)">Don Bosco Hiep Si</a>
+					</div>
 					<div class="collapse navbar-collapse" id="collapseNav">
-	          <ul class="nav navbar-nav">
+						<ul class="nav navbar-nav">
 							<li class="active"><a href="#">Home</a></li>
 							<li><a href="/resources">Resources</a></li>
 							<li><a data-toggle="modal" data-target="#BHT">BHT</a></li>
-	          </ul>
+						</ul>
 					</div>
-        </div>
+				</div>
 			</div>
 		</nav>
+		
 		<div class="container">
 			<div class="row animatedpanel" id="#">
 				<div class="col-xs-12">
@@ -76,7 +77,7 @@
 
 										</div>
 										<div class="col-md-4">
-											<center><img src="images/hiepsi.png"></center>
+											<center><img src="images/hiepsi.png" id="penguin"></center>
 											<br>
 											<br>Top Team for October: <b>Anre</b>
 											<br>
@@ -133,10 +134,8 @@
 												<ul id="videotabs" class="nav nav-tabs">
 													<li class="active"><a data-toggle="tab" href="#vidinfo">Team Videos</a></li>
 													<li><a data-toggle="tab" href="#nathanaenvideo">Nathanaen</a></li>
-<!--
-													<li><a data-toggle="tab" href="#menu2"></a></li>
-													<li><a data-toggle="tab" href="#menu3">Menu 3</a></li>
--->
+													<li><a data-toggle="tab" href="#htvideo">HT</a></li>
+													<!--<li><a data-toggle="tab" href="#menu3">Menu 3</a></li>-->
 												</ul>
 
 												<div class="tab-content">
@@ -150,18 +149,17 @@
 																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/eyaLCTMMA_A" allowfullscreen></iframe>
 															</div>
 													</div>
-<!--
-													<div id="menu2" class="tab-pane fade">
-														<h4>Your video here!</h4>
+
+													<div id="htvideo" class="tab-pane fade">
+														<h4>HT video coming soon!</h4>
 									
 													</div>
-													<div id="menu3" class="tab-pane fade">
+													<!--<div id="menu3" class="tab-pane fade">
 														<h4>Team 3</h4>
 																<div class="embed-responsive embed-responsive-16by9">
 																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/eyaLCTMMA_A" allowfullscreen></iframe>
 														</div>
-													</div>  
--->
+													</div>  -->
 
 														
 												</div>
@@ -321,6 +319,8 @@
 		<script src="js/utils/jquery.min.js"></script>
 		<script src="js/utils/bootstrap.min.js"></script>
 		<script src="js/utils/bootstrap-tabcollapse.js"></script>
+		<script src="js/utils/TweenMax.min.js"></script>
+		<script src="js/utils/ScrollMagic.min.js"></script>
 		<script src="js/main.js"></script>
 		<script src="js/main2.js"></script>
 		<script src="js/utils/mdb.min.js"></script>
